[tool.poetry]
name = "smartcart-backend"
version = "0.1.0"
description = ""
authors = ["Zaid Nadeem"]
readme = "README.md"
packages = [{include = "smartcart_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
anyio = "^3.6.2"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
